Make changes in table-layout cause a reframe.  b=367375  r+sr=bzbarsky  a=schrep